# bitterbot-desktop

./: .dockerignore  .env.example  .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  .pre-commit-config.yaml  .secrets.baseline  .swiftformat  .swiftlint.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox-browser  Dockerfile.sandbox-common  LICENSE  README.md  SECURITY.md  bitterbot.mjs  bitterbot.podman.env  docker-compose.yml  docker-setup.sh  how-the-memory-works.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-podman.sh  tsconfig.json  tsdown.config.ts  vitest.config.ts  vitest.e2e.config.ts
.github/workflows/: ci.yml  desktop-release.yml  orchestrator-release.yml  skill-review.yml
benchmarks/arc-agi-3/: .gitignore  CLAUDE.md  README.md  SUBMISSION.md
benchmarks/arc-agi-3/kaggle/bitterbot_memory_py/: .gitignore  README.md  pyproject.toml
benchmarks/arc-agi-3/kaggle/bitterbot_memory_py/bitterbot_memory/: __init__.py  action_parser.py  agent.py  arc_adapter.py  curiosity.py  embedder.py  epistemic.py  frame.py  hormonal.py  knowledge_graph.py  memory.py  prompts.py  retrieval.py  rules.py  store.py  vllm_client.py
benchmarks/arc-agi-3/kaggle/bitterbot_memory_py/tests/: conftest.py  test_action_parser.py  test_agent.py  test_arc_adapter_offline.py  test_curiosity.py  test_epistemic.py  test_frame.py  test_hormonal.py  test_knowledge_graph.py  test_memory_facade.py  test_retrieval.py  test_rules.py  test_store.py  test_vllm_client.py
benchmarks/biomemeval/: README.md  adapter.ts  db-setup.ts  generate-report.ts  helpers.ts  reporter.ts  scoring.ts  setup.ts  vitest.config.ts
benchmarks/dream-ablation/: README.md  bridge.ts  compare.ts  runner.ts  variants.ts
benchmarks/longmemeval/: README.md  adapter.ts  bitterbot-bridge-biological.ts  bitterbot-bridge.ts  download.sh  entity-extractor.ts  evaluate.ts  run-full-hardmode.sh  runner-biological.ts  runner-retrieval.ts  runner.ts
deploy/bootnode/: Dockerfile  README.md  railway.toml
deploy/relay-fleet/: .gitignore  .terraform.lock.hcl  README.md  cloud-init.yaml  main.tf
desktop/: .env.example  .gitignore  README.md  TAURI.md  electron-builder.yml  env.d.ts  package-lock.json  package.json  postcss.config.mjs  setup-local-env.sh  tsconfig.json  vite.config.ts  vite.electron.config.ts  vitest.config.ts
desktop/electron/: auto-updater.ts  gateway-bridge.ts  main.ts  preload.ts  window-manager.ts
desktop/renderer/: index.html
desktop/resources/: demo-config.json  installer.nsh
desktop/scripts/: build-release.sh  generate-icons.ts  pack-asar.sh  pack-deps.sh
desktop/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: computer_use.rs  main.rs
desktop/test/: setup.ts
docs/: docs.json  index.md  logging.md  observability.md  traffic-stats.md
docs/agents/: arc-agi-3.md  long-horizon.md
docs/automation/: auth-monitoring.md  cron-jobs.md  cron-vs-heartbeat.md  gmail-pubsub.md  hooks.md  long-horizon-tasks.md  poll.md  troubleshooting.md  webhook.md
docs/channels/: broadcast-groups.md  channel-routing.md  discord.md  googlechat.md  group-messages.md  groups.md  index.md  irc.md  location.md  matrix.md  msteams.md  pairing.md  signal.md  slack.md  telegram.md  troubleshooting.md  twitch.md  whatsapp.md
docs/cli/: acp.md  agent.md  agents.md  approvals.md  browser.md  channels.md  config.md  configure.md  cron.md  dashboard.md  devices.md  directory.md  dns.md  docs.md  doctor.md  gateway.md  health.md  heartbeat.md  hooks.md  index.md  logs.md  memory.md  message.md  models.md  node.md  nodes.md  onboard.md  pairing.md  plugins.md  reset.md  sandbox.md  security.md  sessions.md  setup.md  skills.md  status.md  system.md  tui.md  uninstall.md  update.md  (+2 more)
docs/concepts/: agent-loop.md  agent-workspace.md  agent.md  architecture.md  compaction.md  context.md  markdown-formatting.md  memory.md  messages.md  model-failover.md  models.md  (+14 more)
git-hooks/: pre-commit
orchestrator/: Cargo.toml
orchestrator/src/: computer.rs  crypto.rs  ipc.rs  main.rs  security.rs
orchestrator/src/swarm/: http.rs  mod.rs
scripts/: auth-monitor.sh  build-and-run-mac.sh  build-gateway-entry.mjs  build-sea.mjs  build_icon.sh  bundle-a2ui.sh  canvas-a2ui-copy.ts  claude-auth-status.sh  codesign-mac-app.sh  create-dmg.sh  dev-all.mjs  fetch-orchestrator.mjs  make_appcast.sh  management-keygen.ts  notarize-mac-artifact.sh  package-mac-app.sh  package-mac-dist.sh  preinstall-check.mjs  protocol-gen-swift.ts  protocol-gen.ts  restart-mac.sh  run-gateway-fast.mjs  run-node.mjs  setup-auth-system.sh  setup-deps.sh  test-parallel.mjs  test-skill-seekers-native.mjs  watch-node.mjs  write-cli-compat.ts
src/: docker-setup.test.ts  entry.ts  index.ts  logger.test.ts  runtime.ts  utils.test.ts  utils.ts  version.test.ts  version.ts
test/: gateway.multi.e2e.test.ts  git-hooks-pre-commit.integration.test.ts  git-hooks-pre-commit.test.ts  media-understanding.auto.e2e.test.ts  provider-timeout.e2e.test.ts  setup.ts  test-env.ts
(+2190 files in other folders)
