[package]
name = "bitterbot-orchestrator"
version = "0.1.0"
edition = "2021"
description = "P2P orchestrator daemon for Bitterbot skill propagation network"

[dependencies]
libp2p = { version = "0.54", features = [
    "gossipsub",
    "kad",
    "autonat",
    "noise",
    "yamux",
    "tcp",
    "tokio",
    "dns",
    "identify",
    "macros",
    "relay",
    "dcutr",
] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "pem"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
tokio-stream = "0.1"
hex = "0.4"
lru = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
