[package]
name = "bitterbot-desktop"
version = "0.1.0"
edition = "2021"
description = "Bitterbot desktop shell — Tauri 2 wrapper for the Control UI"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = "symbols"
lto = "thin"

# Workspace-level isolation: this is NOT part of the root orchestrator
# workspace. Cargo treats desktop/src-tauri/ as a standalone project
# because there's no parent-level Cargo workspace file in the repo root.
